# youtube_telegram_bot_monolithic

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  base.py  bot.py  config.py  handling_videos_db.py  logger.py  pyproject.toml  tables.py  utils_bot.py  videos_db_handler.py
database/: tables.py
